--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 
 	//DB
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client' // MariaDB
-	compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.0'
+	compileOnly group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.0'
 //	runtimeOnly 'com.h2database:h2'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
