--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 server.port=80
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://finaldb2.cttz939fsks4.ap-northeast-2.rds.amazonaws.com/finaldb2
+spring.datasource.url=jdbc:mariadb://final-private-db.cttz939fsks4.ap-northeast-2.rds.amazonaws.com/final_db
 spring.datasource.username=admin
 spring.datasource.password=qowlghd940524
+
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://finaldb2.cttz939fsks4.ap-northeast-2.rds.amazonaws.com/finaldb2
+#spring.datasource.username=admin
+#spring.datasource.password=qowlghd940524
 
 #spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 #spring.datasource.driver-class-name=org.h2.Driver
